# PyLocalStorage

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  example_demo.py  pyproject.toml  pytest.ini  setup.py  test_complete.py  test_simple.py
examples/: async_example.py  example.py  example_demo.py  quickstart.py
localStoragePy/: __init__.py  storage_backends.py
src/localStoragePro/: __init__.py  async_storage.py  storage_backends.py
tests/: __init__.py  conftest.py  test_async.py  test_complete.py  test_pytest.py  test_simple.py
